2013-02-15  Jiyoun Park (jypark)

    * Add infrastructure to handle message between ecore and parent ecore in Ecore_Evas.

2013-02-14  Cedric Bail

	* Reduce memory consumption of Edje program handler.

2013-02-14  Jihoon Kim (jihoon)

        * edje entry : fix bug not to display preedit string with PREEDIT_TYPE_NONE style
        * edje entry : Fix bug candidate word couldn't be selected with up/down key in the preedit status

2013-02-11  Stefan Schmidt

        * Fix memory leak in error cases in ethumb.

2013-02-08  Stefan Schmidt

        * Fix memory leak in eina_xattr_value_ls.
        * Fix memory leak in gstreamer_ecore_x_check

2013-02-08  Daniel Willman

        * Fix memory usage spike when rotating with the software_x11 engine.

2013-02-08  Tom Hacohen (TAsn)

        * Evas textblock: Fixed a selection issue with different scripts and
	bidi.

2013-02-08  Guillaume Friloux
        * Fix usage of Ecore_Con_Server's internal buffer.

2013-02-08  Carsten Haitzler (The Rasterman)

        * Fix ecore_x ecore_x_screen_is_composited/set() to work
        properly on multihead.

2013-02-07  Christopher Michael (devilhorns)

        * Added ecore_x_randr_crtc_info_free function.

2013-02-07  Christopher Michael (devilhorns)

        * Added ecore_x_randr_crtc_info_get function.

2013-02-07  Cedric Bail

	* eina: Eina_Tiler now take tile size into account.

2013-02-07  WooHyun Jung

	* edje: Checking walking_callbacks for not removing patterns which are still used.

2013-02-06  Cedric Bail

	* eina: fix map leak in Eina_File.

2013-02-05  Eduardo Lima (Etrunko) <eduardo.lima@intel.com>

        * ecore_wayland: Fix return type of function ecore_wl_outputs_get()

2013-02-04  U. Artie Eoff (uartie) <ulysses.a.eoff@intel.com>

        * ecore_wayland: Add #ifdef __cplusplus to Ecore_Wayland.h so the
        API can be used by C++ programs.
        * ecore_wayland: Add ecore_wl_registry_get
        * ecore_wayland: Add ecore_wl_globals_get
