@@ -1,3 +1,8 @@
+2013-02-15  Tom Hacohen (TAsn)
+
+        * Edje textblock: Improved textblock fit and added support for
+	size_range.
+
 2013-02-15  Jiyoun Park (jypark)
 
     * Add infrastructure to handle message between ecore and parent ecore in Ecore_Evas.
